; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_hw.c_ecore_dmae_host2host.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_hw.c_ecore_dmae_host2host.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecore_hwfn = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.ecore_ptt = type { i32 }
%struct.ecore_dmae_params = type { i32 }

@ECORE_DMAE_ADDRESS_HOST_PHYS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ecore_dmae_host2host(%struct.ecore_hwfn* %0, %struct.ecore_ptt* %1, i32 %2, i32 %3, i32 %4, %struct.ecore_dmae_params* %5) #0 {
  %7 = alloca %struct.ecore_hwfn*, align 8
  %8 = alloca %struct.ecore_ptt*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.ecore_dmae_params*, align 8
  %13 = alloca i32, align 4
  store %struct.ecore_hwfn* %0, %struct.ecore_hwfn** %7, align 8
  store %struct.ecore_ptt* %1, %struct.ecore_ptt** %8, align 8
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store %struct.ecore_dmae_params* %5, %struct.ecore_dmae_params** %12, align 8
  %14 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %7, align 8
  %15 = getelementptr inbounds %struct.ecore_hwfn, %struct.ecore_hwfn* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = call i32 @OSAL_SPIN_LOCK(i32* %16)
  %18 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %7, align 8
  %19 = load %struct.ecore_ptt*, %struct.ecore_ptt** %8, align 8
  %20 = load i32, i32* %9, align 4
  %21 = load i32, i32* %10, align 4
  %22 = load i32, i32* @ECORE_DMAE_ADDRESS_HOST_PHYS, align 4
  %23 = load i32, i32* @ECORE_DMAE_ADDRESS_HOST_PHYS, align 4
  %24 = load i32, i32* %11, align 4
  %25 = load %struct.ecore_dmae_params*, %struct.ecore_dmae_params** %12, align 8
  %26 = call i32 @ecore_dmae_execute_command(%struct.ecore_hwfn* %18, %struct.ecore_ptt* %19, i32 %20, i32 %21, i32 %22, i32 %23, i32 %24, %struct.ecore_dmae_params* %25)
  store i32 %26, i32* %13, align 4
  %27 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %7, align 8
  %28 = getelementptr inbounds %struct.ecore_hwfn, %struct.ecore_hwfn* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 0
  %30 = call i32 @OSAL_SPIN_UNLOCK(i32* %29)
  %31 = load i32, i32* %13, align 4
  ret i32 %31
}

declare dso_local i32 @OSAL_SPIN_LOCK(i32*) #1

declare dso_local i32 @ecore_dmae_execute_command(%struct.ecore_hwfn*, %struct.ecore_ptt*, i32, i32, i32, i32, i32, %struct.ecore_dmae_params*) #1

declare dso_local i32 @OSAL_SPIN_UNLOCK(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
